Increase opacity to fix legibility on white background

--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -20,7 +20,7 @@ $border-style: dotted;
 }
 
 .bar {
-  opacity: 0.6;
+  opacity: 0.8;
   background-color: $bar-color;
   border-top: 2px $border-style $busy-color;
   border-right: 2px $border-style $busy-color;
